2013-05-28  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Use $BIG_OPERATION_STEP for event deletion.

2013-05-27  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Several fixes. Save the last compact date
	  to avoid compacting the same interval twice.

2013-05-23  Sancho Lerena <slerena@artica.es>

        * util/pandora_logrotate: Fixed several problems due rotation.
        Now there is no need to restart any process, much safer.
        Added correct paths for pandora console log on centos and debian.

2013-05-22  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.spec,
	  pandora_server.redhat.spec,
	  DEBIAN/postinst,
	  DEBIAN/conffiles,
	  DEBIAN/make_deb_package.sh,
	  conf/pandora_server.conf.new,
	  pandora_server_installer: Merged Sancho's changes from 4.0 branch.

2013-05-20  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_xml_stress.pl: Added support for strictly incremental
	  modules.

2013-05-20  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_xml_stress.pl,
	  util/pandora_xml_stress.conf: Added support for data attenuation on
	  certain days.

2013-05-16  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_server: Added information about the loading of the
	  enterprise module to the log.

2013-05-14  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Added the Pandora FMS's console MIB
	  to snmp* calls.

	* pandora_server_installer,
	  pandora_server.spec,
	  lib/PandoraFMS/Tools.pm,
	  lib/PandoraFMS/Config.pm,
	  Makefile.PL,
	  pandora_server.redhat.spec,
	  DEBIAN/control: Removed PERL's SNMP lib from the deps.

2013-05-13  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Tools.pm: Merged from 4.0 branch. Directly call
	  snmptranslate, since SNMP::translateObj does not seem to load
	  enterprise MIBs.

2013-05-13  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Fixes crash on inverse resolution for
	GIS information on openstreetmaps. This was due function was moved from