@@ -1,3 +1,8 @@
+2013-06-06  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/ReconServer.pm: Merged from 4.0 branch. Create agents
+	  before trying to assign addresses.
+
 2013-05-28  Ramon Novoa  <rnovoa@artica.es>
 
 	* util/pandora_db.pl: Use $BIG_OPERATION_STEP for event deletion.
